crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@18.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '1 '::tsquery;"
---
SelectStmt@0..21
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..20
    TypeCast@7..20
      AConst@7..11
        Sconst@7..11 "'1 '"
      Typecast@11..13 "::"
      TypeName@13..20
        Ident@13..20 "tsquery"
  Ascii59@20..21 ";"

