crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@181.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_rank_cd(' a:1 b:2 s:3A d:2A g'::tsvector, 'a <2> s:A');"
---
SelectStmt@0..65
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..63
    FuncCall@7..63
      Ident@7..17 "ts_rank_cd"
      Ascii40@17..18 "("
      TypeCast@18..50
        AConst@18..40
          Sconst@18..40 "' a:1 b:2 s:3A d:2A g'"
        Typecast@40..42 "::"
        TypeName@42..50
          Ident@42..50 "tsvector"
      Ascii44@50..51 ","
      Whitespace@51..52 " "
      AConst@52..63
        Sconst@52..63 "'a <2> s:A'"
  Ascii41@63..64 ")"
  Ascii59@64..65 ";"

