crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@183.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_rank_cd(' a:1 sa:2A sb:2D g'::tsvector, 'a <-> s:*');"
---
SelectStmt@0..63
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..61
    FuncCall@7..61
      Ident@7..17 "ts_rank_cd"
      Ascii40@17..18 "("
      TypeCast@18..48
        AConst@18..38
          Sconst@18..38 "' a:1 sa:2A sb:2D g'"
        Typecast@38..40 "::"
        TypeName@40..48
          Ident@40..48 "tsvector"
      Ascii44@48..49 ","
      Whitespace@49..50 " "
      AConst@50..61
        Sconst@50..61 "'a <-> s:*'"
  Ascii41@61..62 ")"
  Ascii59@62..63 ";"

