crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@184.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_rank_cd(' a:1 sa:2A sb:2D g'::tsvector, 'a <-> s:* <-> sa:A');"
---
SelectStmt@0..72
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..70
    FuncCall@7..70
      Ident@7..17 "ts_rank_cd"
      Ascii40@17..18 "("
      TypeCast@18..48
        AConst@18..38
          Sconst@18..38 "' a:1 sa:2A sb:2D g'"
        Typecast@38..40 "::"
        TypeName@40..48
          Ident@40..48 "tsvector"
      Ascii44@48..49 ","
      Whitespace@49..50 " "
      AConst@50..70
        Sconst@50..70 "'a <-> s:* <-> sa:A'"
  Ascii41@70..71 ")"
  Ascii59@71..72 ";"

